--- a/src/pages/books-category.f7.html
+++ b/src/pages/books-category.f7.html
@@ -96,7 +96,8 @@
           // Reset loading flag
           allowInfinite = true;
 
-          if ( !json.rows.length || json.rows.length < 1) {
+          if ( !json.rows ) {
+            pageContentRow.append(`<div class="block col-100">Nothing found</div>`);
             // Nothing more to load, detach infinite scroll events to prevent unnecessary loadings
             app.infiniteScroll.destroy('.infinite-scroll-content');
             // Remove preloader
