--- a/src/pages/books-detail.f7.html
+++ b/src/pages/books-detail.f7.html
@@ -74,7 +74,7 @@
         /* implode data penerbit */
         let penerbit = [];
         data.data.penerbit.forEach(function(a){
-          penerbit.push(`<a href="/penerbit/${a.id}">${a.title}</a>`);
+          penerbit.push(`<a href="/penerbit/${a.id}#${a.title}">${a.title}</a>`);
         });
         penerbit = penerbit.join(', ');
         
