--- a/src/pages/news.f7.html
+++ b/src/pages/news.f7.html
@@ -116,8 +116,8 @@
           // Reset loading flag
           allowInfinite = true;
 
-          console.log('rows length : ', json.rows.length);
-          if (json.rows.length < 1) {
+          if ( !json.rows) {
+            elContentRowsInfiniteScroll.append(`<div class="block col-100">Nothing found</div>`);
             // Nothing more to load, detach infinite scroll events to prevent unnecessary loadings
             app.infiniteScroll.destroy('.infinite-scroll-content');
             // Remove preloader
@@ -135,7 +135,6 @@
                 </div>
               </div>         
             `);
-            elContentRowsInfiniteScroll.attr('data-page',nextPage);
 
             app.lazy.create(elContentRowsInfiniteScroll.find('.lazy'));
             // event to load detail news;
@@ -144,6 +143,7 @@
               router.navigate(dataHref,{ transition: 'f7-push' })
             })
           });
+          elContentRowsInfiniteScroll.attr('data-page',nextPage);
         });
 
       });
