--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -32,14 +32,48 @@
       </div>
      
       <div class="block">
-        <a href="" class="padding"><img src="https://via.placeholder.com/50.png?text=icon 1"></a>
-        <a href="" class="padding"><img src="https://via.placeholder.com/50.png?text=icon 2"></a>
-        <a href="" class="padding"><img src="https://via.placeholder.com/50.png?text=icon 3"></a>
-        <a href="" class="padding"><img src="https://via.placeholder.com/50.png?text=icon 4"></a>
-        <a href="" class="padding"><img src="https://via.placeholder.com/50.png?text=icon 5"></a>
-        <a href="" class="padding"><img src="https://via.placeholder.com/50.png?text=icon 6"></a>
-        <a href="" class="padding"><img src="https://via.placeholder.com/50.png?text=icon 7"></a>
-        <a href="" class="padding"><img src="https://via.placeholder.com/50.png?text=icon 8"></a>
+        <div class="row">
+          <a href="" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;">house</i>
+            <span class="text-align-center">Label 2</span>
+          </a>
+          <a href="" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;">house</i>
+            <span class="text-align-center">Label 2</span>
+          </a>
+          <a href="" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;">house</i>
+            <span class="text-align-center">Label 2</span>
+          </a>
+        </div>
+        <div class="row margin-top">
+          <a href="" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;">house</i>
+            <span class="text-align-center">Label 2</span>
+          </a>
+          <a href="" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;">house</i>
+            <span class="text-align-center">Label 2</span>
+          </a>
+          <a href="" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;">house</i>
+            <span class="text-align-center">Label 2</span>
+          </a>
+        </div>
+        <div class="row margin-top">
+          <a href="" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;">house</i>
+            <span class="text-align-center">Label 2</span>
+          </a>
+          <a href="" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;">house</i>
+            <span class="text-align-center">Label 2</span>
+          </a>
+          <a href="/page/faq#FAQ (Frequently asked questions)" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;">question_diamond</i>
+            <span class="text-align-center">FAQ</span>
+          </a>
+        </div>
       </div>
 
       <!-- Static Navbar -->
