--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -65,9 +65,9 @@
             <i class="icon f7-icons" style="width: auto;">house</i>
             <span class="text-align-center">Label 2</span>
           </a>
-          <a href="" class="col" style="display: grid;">
-            <i class="icon f7-icons" style="width: auto;">house</i>
-            <span class="text-align-center">Label 2</span>
+          <a href="/page/join-reseller#Join Reseller" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;">person_badge_plus_fill</i>
+            <span class="text-align-center">Join Reseller</span>
           </a>
           <a href="/page/faq#FAQ (Frequently asked questions)" class="col" style="display: grid;">
             <i class="icon f7-icons" style="width: auto;">question_diamond</i>
