tambah halaman bantuan/kontak kami

--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -33,38 +33,6 @@
      
       <div class="block">
         <div class="row">
-          <a href="" class="col" style="display: grid;">
-            <i class="icon f7-icons" style="width: auto;">house</i>
-            <span class="text-align-center">Label 2</span>
-          </a>
-          <a href="" class="col" style="display: grid;">
-            <i class="icon f7-icons" style="width: auto;">house</i>
-            <span class="text-align-center">Label 2</span>
-          </a>
-          <a href="" class="col" style="display: grid;">
-            <i class="icon f7-icons" style="width: auto;">house</i>
-            <span class="text-align-center">Label 2</span>
-          </a>
-        </div>
-        <div class="row margin-top">
-          <a href="" class="col" style="display: grid;">
-            <i class="icon f7-icons" style="width: auto;">house</i>
-            <span class="text-align-center">Label 2</span>
-          </a>
-          <a href="" class="col" style="display: grid;">
-            <i class="icon f7-icons" style="width: auto;">house</i>
-            <span class="text-align-center">Label 2</span>
-          </a>
-          <a href="" class="col" style="display: grid;">
-            <i class="icon f7-icons" style="width: auto;">house</i>
-            <span class="text-align-center">Label 2</span>
-          </a>
-        </div>
-        <div class="row margin-top">
-          <a href="" class="col" style="display: grid;">
-            <i class="icon f7-icons" style="width: auto;">house</i>
-            <span class="text-align-center">Label 2</span>
-          </a>
           <a href="/page/join-reseller#Join Reseller" class="col" style="display: grid;">
             <i class="icon f7-icons" style="width: auto;">person_badge_plus_fill</i>
             <span class="text-align-center">Join Reseller</span>
@@ -72,6 +40,10 @@
           <a href="/page/faq#FAQ (Frequently asked questions)" class="col" style="display: grid;">
             <i class="icon f7-icons" style="width: auto;">question_diamond</i>
             <span class="text-align-center">FAQ</span>
+          </a>
+          <a href="/page/bantuan#Kontak Kami" class="col" style="display: grid;">
+            <i class="icon f7-icons" style="width: auto;">bubble_left_bubble_right</i>
+            <span class="text-align-center">Bantuan</span>
           </a>
         </div>
       </div>
