remove space after-before halaman join reseller

--- a/src/pages/static-page.f7.html
+++ b/src/pages/static-page.f7.html
@@ -92,14 +92,14 @@
                   <a href="#tab-2" class="tab-link">English</a>
                 </div>
               </div>
-              <div class="tabs">
+              <div class="tabs" style="margin: -5em 0em -5em 0em !important;">
                 <div id="tab-1" class="page-content tab tab-active">
-                  <div class="block">
+                  <div class="block text-align-justify">
                     <p>${data.data.content.in}</p>
                   </div>
                 </div>
                 <div id="tab-2" class="page-content tab">
-                  <div class="block">
+                  <div class="block text-align-justify">
                     <p>${data.data.content.us}</p>
                   </div>
                 </div>
