--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
   <% if (process.env.TARGET === 'cordova') { %>
   <script src="cordova.js"></script>
   <% } %>
+  <!-- <script src="localforage.js"></script> -->
   <!-- built script files will be auto injected -->
 </body>
 </html>
