--- a/src/app.f7.html
+++ b/src/app.f7.html
@@ -53,7 +53,7 @@
             <span class="tabbar-label">Kategori</span>
           </a>
           <a href="#view-keranjang" class="tab-link">
-            <i class="icon f7-icons">cart<span class="badge color-red">5</span></i>
+            <i class="icon f7-icons">cart<span class="badge color-red cart-label" style="display: none;">0</span></i>
             <!-- Label text -->
             <span class="tabbar-label">Keranjang</span>
           </a>
@@ -194,5 +194,47 @@
         });
       }
     },
+    on: {
+      pageMounted: function(e, page) {
+        console.log('pageMounted->', page);
+      },
+      pageInit: function(e, page) {
+        console.log('pageInit->', page);
+      },
+      pageBeforeIn: function(e, page) {
+        console.log('pageBeforeIn->', page);
+        let $$ = this.$$;
+        let app = this.$app;
+        let cartLabel = $$('.cart-label');
+        app.localforage.getItem('carts').then(function(value) {
+            // This code runs once the value has been loaded
+            // from the offline store.
+            if ( value.rowsData ) {
+              let cartRows = value.rowsData.length;
+              cartLabel.text(cartRows);
+              cartLabel.css({"display" : "inline-flex"});
+              console.log(cartRows)
+            }
+            
+            // console.log();
+        }).catch(function(err) {
+            // This code runs if there were any errors
+            console.log(err);
+        });
+      },
+      pageAfterIn: function(e, page) {
+        let app = this.$app;
+        console.log('pageAfterIn->', page);
+      },
+      pageBeforeOut: function(e, page) {
+        console.log('pageBeforeOut->', page);
+      },
+      pageAfterOut: function(e, page) {
+        console.log('pageAfterOut->', page);
+      },
+      pageBeforeRemove: function(e, page) {
+        console.log('pageBeforeRemove->', page);
+      },
+    }
   }
 </script>
